bb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bb
spec:
  containers:
  - name: busybox
    image: busybox
    command:
          - sleep
          - "3600"
  restartPolicy: Always
