busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox128
  role: frontend
spec:
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    name: busybox
  dnsPolicy: Default
